--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 
           <ul class="features-list">
             <li>
+              <div class="icon-container">
+                <svg class="icon-features" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3>Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +81,11 @@
               </p>
             </li>
             <li>
+              <div class="icon-container">
+                <svg class="icon-features" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3>Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +93,11 @@
               </p>
             </li>
             <li>
+              <div class="icon-container">
+                <svg class="icon-features" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3>Diligence</h3>
               <p>
                 Research and confirm brands with the strongest digital growth
@@ -90,6 +105,11 @@
               </p>
             </li>
             <li>
+              <div class="icon-container">
+                <svg class="icon-features" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3>Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -115,6 +135,53 @@
               <div class="person-biog">
                 <h3 class="person">Mark Guerrero</h3>
                 <p class="bio">Product Designer</p>
+                <ul class="person-socials">
+                  <li>
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://x.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="member">
@@ -127,6 +194,53 @@
               <div class="person-biog">
                 <h3 class="person">Tom Ford</h3>
                 <p class="bio">Frontend Developer</p>
+                <ul class="person-socials">
+                  <li>
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://x.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="member">
@@ -139,6 +253,53 @@
               <div class="person-biog">
                 <h3 class="person">Camila Garcia</h3>
                 <p class="bio">Marketing</p>
+                <ul class="person-socials">
+                  <li>
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://x.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="member">
@@ -151,6 +312,53 @@
               <div class="person-biog">
                 <h3 class="person">Daniel Wilson</h3>
                 <p class="bio">UI Designer</p>
+                <ul class="person-socials">
+                  <li>
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://x.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="social-item-link"
+                    >
+                      <svg height="16" width="16" class="social-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -173,13 +381,20 @@
                 <p>App</p>
               </div>
             </li>
-            <li>
-              <img
-                src="./images/CashlessPayment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+            <li class="wrapping">
+              <div class="image-wraping">
+                <img
+                  src="./images/CashlessPayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish andUser-Friendly App Design Concepts · Task Manager
+                  App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                  Storage App
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h3>Cashless Payment</h3>
                 <p>Marketing</p>
@@ -241,13 +456,65 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="./index.html"
-          ><span class="web">Web</span>studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-info">
+          <a class="footer-logo" href="./index.html"
+            ><span class="web">Web</span>studio</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-contact">
+          <p class="futer-contacts-text">Social Media</p>
+          <ul class="footer-socials">
+            <li>
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="footer-social-link"
+              >
+                <svg height="16" width="16" class="social-svg">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://x.com/"
+                target="_blank"
+                class="footer-social-link"
+              >
+                <svg height="16" width="16" class="social-svg">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li>
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="footer-social-link"
+              >
+                <svg height="16" width="16" class="social-svg">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/"
+                target="_blank"
+                class="footer-social-link"
+              >
+                <svg height="16" width="16" class="social-svg">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
