--- a/index.html
+++ b/index.html
@@ -369,19 +369,26 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
-              <img
-                src="./images/BankingApp.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+            <li class="portfolio-card">
+              <div class="image-wraping">
+                <img
+                  src="./images/BankingApp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish andUser-Friendly App Design Concepts · Task Manager
+                  App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                  Storage App
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h3>Banking App</h3>
                 <p>App</p>
               </div>
             </li>
-            <li class="wrapping">
+            <li class="portfolio-card">
               <div class="image-wraping">
                 <img
                   src="./images/CashlessPayment.jpg"
@@ -400,50 +407,78 @@
                 <p>Marketing</p>
               </div>
             </li>
-            <li>
-              <img
-                src="./images/MeditaionApp.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+            <li class="portfolio-card">
+              <div class="image-wraping">
+                <img
+                  src="./images/MeditaionApp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish andUser-Friendly App Design Concepts · Task Manager
+                  App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                  Storage App
+                </div>
+              </div>
 
               <div class="portfolio-info">
                 <h3>Meditation App</h3>
                 <p>App</p>
               </div>
             </li>
-            <li>
-              <img
-                src="./images/TaxiService.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+            <li class="portfolio-card">
+              <div class="image-wraping">
+                <img
+                  src="./images/TaxiService.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish andUser-Friendly App Design Concepts · Task Manager
+                  App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                  Storage App
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h3>Taxi Service</h3>
                 <p>Marketing</p>
               </div>
             </li>
-            <li>
-              <img
-                src="./images/ScreenIllustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+            <li class="portfolio-card">
+              <div class="image-wraping">
+                <img
+                  src="./images/ScreenIllustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish andUser-Friendly App Design Concepts · Task Manager
+                  App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                  Storage App
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h3>Screen Illustrations</h3>
                 <p>Design</p>
               </div>
             </li>
-            <li>
-              <img
-                src="./images/OnlineCourses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+            <li class="portfolio-card">
+              <div class="image-wraping">
+                <img
+                  src="./images/OnlineCourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish andUser-Friendly App Design Concepts · Task Manager
+                  App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                  Storage App
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h3>Online Courses</h3>
                 <p>Marketing</p>
@@ -474,7 +509,7 @@
                 target="_blank"
                 class="footer-social-link"
               >
-                <svg height="16" width="16" class="social-svg">
+                <svg height="24" width="24" class="social-svg">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -485,7 +520,7 @@
                 target="_blank"
                 class="footer-social-link"
               >
-                <svg height="16" width="16" class="social-svg">
+                <svg height="24" width="24" class="social-svg">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -497,7 +532,7 @@
                 target="_blank"
                 class="footer-social-link"
               >
-                <svg height="16" width="16" class="social-svg">
+                <svg height="24" width="24" class="social-svg">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -508,7 +543,7 @@
                 target="_blank"
                 class="footer-social-link"
               >
-                <svg height="16" width="16" class="social-svg">
+                <svg height="24" width="24" class="social-svg">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
