--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish andUser-Friendly App Design Concepts · Task Manager
                   App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                   Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3>Banking App</h3>
@@ -396,11 +396,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish andUser-Friendly App Design Concepts · Task Manager
                   App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                   Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3>Cashless Payment</h3>
@@ -415,11 +415,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish andUser-Friendly App Design Concepts · Task Manager
                   App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                   Storage App
-                </div>
+                </p>
               </div>
 
               <div class="portfolio-info">
@@ -435,11 +435,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish andUser-Friendly App Design Concepts · Task Manager
                   App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                   Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3>Taxi Service</h3>
@@ -454,11 +454,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish andUser-Friendly App Design Concepts · Task Manager
                   App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                   Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3>Screen Illustrations</h3>
@@ -473,11 +473,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish andUser-Friendly App Design Concepts · Task Manager
                   App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                   Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3>Online Courses</h3>
